--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,8 @@ services:
   moodle:
     build: .
     ports:
-      - "8000:8080"
+      #Add port 80 if you want, or change your server port
+      - "8080:8080"
     volumes:
       - moodledata:/var/moodledata
     environment:
@@ -15,7 +16,8 @@ services:
     volumes:
       - dbdata:/var/lib/mysql
     ports:
-      - "8001:3306"
+      #Change your SQL server port if you want
+      - "3306:3306"
     environment:
       MYSQL_ROOT_PASSWORD: yourpassword
       MYSQL_DATABASE: moodle
